# TurtleBot3-Trajectory-Recorder-and-Visualizer

./: README.md
anscer_interface/: CMakeLists.txt  package.xml
anscer_interface/srv/: TrajectoryPath.srv
my_robot_trajectory_publisher/: CMakeLists.txt  package.xml
my_robot_trajectory_publisher/src/: trajectory_publisher.cpp  trajectory_reader.cpp
